--- a/blog.html
+++ b/blog.html
@@ -592,6 +592,7 @@ window.addEventListener('load', handleScroll);
 </script>
 
 <br><br>
+<!-- FOOTER -->
 <footer class="footer">
   <style>
     /* ------------------ FOOTER AZUL ELEGANTE ------------------ */
@@ -723,7 +724,19 @@ window.addEventListener('load', handleScroll);
   color: #ffdd57; /* un color contraste */
 }
 
-    
+    .hidden-link {
+  color: inherit;
+  text-decoration: none;
+  background: transparent;
+}
+
+/* Evita cambios de color en visitado, hover o active */
+.hidden-link:visited,
+.hidden-link:hover,
+.hidden-link:active {
+  color: inherit;
+  text-decoration: none;
+}
   </style>
 
   <div class="footer-container">
@@ -769,8 +782,8 @@ window.addEventListener('load', handleScroll);
   </div>
 
   <div class="footer-bottom">
-    © 2025 El Turista — San José • Diseñado por Agustin Espinosa
-  </div>
+    © 2025 El Turista — San José • Diseñado por  <a class="hidden-link" href="https://tintin-18.github.io/portafoliopersonal">Agustin Espinosa</a>
+
 </footer>
 </body>
 </html>
