--- a/paquete-solplaya.html
+++ b/paquete-solplaya.html
@@ -11,32 +11,41 @@
 
   <!-- Page styles -->
   <style>
-    
-    :root{
-      --bg:#fff8f2;
-      --card:#fff;
-      --muted:#6b7c84;
-      --primary:#ff6f3c; /* colores sol y playa */
-      --accent:#c94d00;
-      --shadow: 0 8px 28px rgba(3,15,17,0.06);
-      --radius:16px;
-    }
+ :root{
+  --bg:#f2fbff;
+  --card:#fff;
+  --muted:#6b7c84;
+  --primary:#ff6f3c; /* colores sol y playa */
+  --accent:#c94d00;
+  --shadow: 0 8px 28px rgba(3,15,17,0.06);
+  --radius:16px;
+  --white:#fff;
+  --text:#05343a;
+  --secondary:#065a60;
+}
 
-    * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
 
-    /* ------------------ HEADER ------------------ */
+html, body {
+  margin: 0;
+  padding: 0;
+  background: var(--bg);
+  font-family: 'Nunito', system-ui, -apple-system, "Segoe UI", Roboto, Montserrat, "Helvetica Neue", Arial;
+  color: var(--text);
+}
+
+/* ------------------ HEADER ------------------ */
 header {
-  background: white;
-  border-bottom: 0.125rem solid var(--accent); /* 2px */
+  background: var(--white);
+  border-bottom: 2px solid var(--accent);
   position: sticky;
   top: 0;
   z-index: 1000;
-  margin-bottom: 2rem;
 }
 
 nav {
@@ -44,24 +53,24 @@ nav {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0.75rem 0; /* 12px */
+  padding: 0.75rem 0;
 }
 
 .brand {
   display: flex;
   align-items: center;
-  gap: 0.625rem; /* 10px */
+  gap: 0.625rem;
 }
 
 .brand img {
-  height: 2.625rem; /* 42px */
+  height: 2.625rem;
 }
 
 .navlinks {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap: 0.75rem; /* 12px */
+  gap: 0.75rem;
 }
 
 .navlinks a {
@@ -78,8 +87,8 @@ nav {
 .navlinks .cta {
   background: var(--primary);
   color: var(--white);
-  padding: 0.375rem 0.875rem; /* 6px 14px */
-  border-radius: 0.5rem; /* 8px */
+  padding: 0.375rem 0.875rem;
+  border-radius: 0.5rem;
   transition: background 0.3s;
 }
 
@@ -87,90 +96,301 @@ nav {
   background: var(--secondary);
 }
 
-  :root{
-    --bg:#f2fbff;
-    --card:#fff;
-    --muted:#6b7c84;
-    --primary:#0c9aa6; /* agua termal */
-    --accent:#065a60;
-    --shadow: 0 8px 28px rgba(3,15,17,0.06);
-    --radius:16px;
-  }
-
-  html,body{margin:0;padding:0;background:var(--bg);font-family:'Nunito',system-ui,-apple-system,"Segoe UI",Roboto,Montserrat, "Helvetica Neue", Arial; color:#05343a;}
+/* ------------------ CONTAINERS ------------------ */
 .container {
   width: 100%;
-  max-width: 75rem; /* 1200px */
+  max-width: 75rem;
   margin: 0 auto;
-  padding: 0 1rem; /* 16px */
+  padding: 0 1rem;
 }
 
+/* ------------------ HERO ------------------ */
+.hero {
+  background: linear-gradient(180deg, rgba(255,111,60,0.9), rgba(201,77,0,0.9)), url('img/floripa-hero.jpg') center/cover no-repeat;
+  border-radius: 20px;
+  color: #fff;
+  padding: 64px 20px;
+  box-shadow: 0 12px 36px rgba(2,28,30,0.16);
+  margin-bottom: 2rem;
+}
 
-    .hero{
-      background: linear-gradient(180deg, rgba(255,111,60,0.9), rgba(201,77,0,0.9)), url('img/floripa-hero.jpg') center/cover no-repeat;
-      border-radius: 20px;
-      color: #fff;
-      padding: 64px 20px;
-      box-shadow: 0 12px 36px rgba(2,28,30,0.16);
-      margin-bottom: 2rem;
-    }
-    .hero-inner{display:grid;grid-template-columns: 1fr 420px; gap: 2rem; align-items:center;}
-    .hero-title{font-size:2.1rem;margin:0 0 0.6rem 0;font-weight:700;}
-    .hero-sub{margin:0;color:rgba(255,255,255,0.95);font-size:1.05rem;line-height:1.6;}
-    .hero-card{background:rgba(255,255,255,0.08);padding:18px;border-radius:12px;text-align:center;}
-    .price-tag{font-size:1.6rem;font-weight:800;color:#fff;}
-    .pill{display:inline-block;background:rgba(255,255,255,0.12);padding:6px 10px;border-radius:999px;font-weight:700;margin-top:10px;font-size:0.95rem}
+.hero-inner {
+  display: grid;
+  grid-template-columns: 1fr 420px;
+  gap: 2rem;
+  align-items: center;
+}
 
-    footer {
-  border-top: 0.125rem solid var(--accent); /* 2px */
-  padding: 1.25rem 0; /* 20px */
+.hero-title {
+  font-size: 2.1rem;
+  margin-bottom: 0.6rem;
+  font-weight: 700;
+}
+
+.hero-sub {
+  font-size: 1.05rem;
+  line-height: 1.6;
+  color: rgba(255,255,255,0.95);
+}
+
+.hero-card {
+  background: rgba(255,255,255,0.08);
+  padding: 18px;
+  border-radius: 12px;
+  text-align: center;
+}
+
+.price-tag {
+  font-size: 1.6rem;
+  font-weight: 800;
+  color: #fff;
+}
+
+.pill {
+  display: inline-block;
+  background: rgba(255,255,255,0.12);
+  padding: 6px 12px;
+  border-radius: 999px;
+  font-weight: 700;
+  margin-top: 10px;
+  font-size: 0.95rem;
+  text-align: center;
+  white-space: nowrap;
+}
+
+/* Botones hero */
+.hero div > a {
+  text-decoration: none;
+}
+
+.btn-primary {
+  background: var(--primary);
+  color: #fff;
+  padding: 12px 20px;
+  border-radius: 10px;
+  font-weight: 800;
+  text-align: center;
+  box-shadow: 0 8px 18px rgba(255,111,60,0.16);
+}
+
+.btn-secondary {
+  background: transparent;
+  border: 2px solid black;
+  color: black;
+  padding: 10px 16px;
+  border-radius: 10px;
+  font-weight: 700;
+  text-align: center;
+}
+
+/* ------------------ CARDS Y SECCIONES ------------------ */
+.card {
+  background: var(--card);
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+  padding: 20px;
+}
+
+h2, h3 {
+  color: #07373a;
+  margin-top: 0;
+}
+
+p.lead {
+  color: var(--muted);
+  font-size: 1.05rem;
+  line-height: 1.6;
+}
+
+/* GALLERY */
+.gallery {
+  display: flex;
+  gap: 16px;
+  overflow-x: auto;
+  padding: 8px 6px;
+  scroll-behavior: smooth;
+}
+
+.gallery::-webkit-scrollbar {
+  height: 8px;
+}
+
+.gallery::-webkit-scrollbar-thumb {
+  background: var(--primary);
+  border-radius: 8px;
+}
+
+.gallery-item {
+  min-width: 220px;
+  border-radius: 12px;
+  overflow: hidden;
+  flex-shrink: 0;
+  cursor: pointer;
+  box-shadow: 0 8px 20px rgba(2,20,20,0.06);
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  display: block;
+  transition: transform .3s;
+}
+
+.gallery-item:hover img {
+  transform: scale(1.04);
+}
+
+/* ITINERARIO */
+.itinerary {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 16px;
+}
+
+.it-card {
+  padding: 18px;
+  border-radius: 12px;
+  background: linear-gradient(180deg,#ffffff, #fff5ef);
+  box-shadow: 0 8px 18px rgba(4,20,20,0.04);
+}
+
+.it-card h4 {
+  margin-bottom: 8px;
+}
+
+.it-card p {
+  margin: 0;
+  color: var(--muted);
+}
+
+/* INCLUDES */
+.includes ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  gap: 10px;
+}
+
+.includes li {
+  padding-left: 28px;
+  position: relative;
+  color: var(--muted);
+  font-weight: 600;
+}
+
+.includes li::before {
+  content: "✔";
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: var(--primary);
+  font-weight: 900;
+}
+
+/* TIPS */
+.tips {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px,1fr));
+  gap: 12px;
+}
+
+.tip {
+  background: linear-gradient(180deg,#fff5ef,#ffffff);
+  padding: 14px;
+  border-radius: 12px;
+  text-align: center;
+  font-weight: 600;
+  color: var(--accent);
+}
+
+/* EXPERIENCES */
+.experience-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+  gap: 12px;
+}
+
+.exp {
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.exp img {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  display: block;
+}
+
+.exp .exp-body {
+  padding: 12px;
+  background: #fff;
+}
+
+/* CTA GENERAL */
+.cta {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
+  margin: 28px 0;
+}
+
+/* ------------------ ANIMACIONES ------------------ */
+.fade-in {
+  opacity: 0;
+  transform: translateY(2rem);
+  transition: opacity .8s ease-out, transform .8s ease-out;
+}
+
+.fade-in.show {
+  opacity: 1;
+  transform: none;
+}
+
+/* ------------------ FOOTER ------------------ */
+/* (lo dejamos como en tu template) */
+.footer{ background:#0d1b2a; color:#e6e6e6; padding:3rem 1rem; margin-top:2.5rem }
+.footer-container{ max-width:75rem; margin:0 auto; display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:2rem }
+.footer-logo{ height:3rem; margin-bottom:0.6rem }
+.footer-bottom{ text-align:center; margin-top:2rem; color:#8d99ae; border-top:1px solid rgba(65,90,119,0.12); padding-top:1rem }
+
+footer {
+  border-top: 0.125rem solid var(--accent);
+  padding: 1.25rem 0;
   color: var(--muted);
   background: var(--white);
   text-align: center;
 }
+/* small aesthetic touch: subtle fade-in */
 
-    @media(max-width:980px){
-      .hero-inner{grid-template-columns:1fr}
-      .hero{padding:48px 16px}
-    }
+/* ------------------ MEDIA QUERIES ------------------ */
+@media(max-width:980px){
+  .hero-inner {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .hero {
+    padding: 48px 16px;
+  }
+  .hero div > div, .hero div > a {
+    justify-content: center;
+    margin: 0 auto;
+  }
+  .pill {
+    margin: 6px auto;
+  }
+}
 
-    .two-col{display:grid;grid-template-columns: 1fr 360px; gap:24px; align-items:start;}
-    @media(max-width:980px){.two-col{grid-template-columns:1fr}}
+@media(max-width:768px){
+  .experience-cards img,
+  .exp img {
+    height: 120px;
+  }
+}
 
-    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:20px;}
-    h2,h3{color:#07373a;margin-top:0}
-    p.lead{color:var(--muted);font-size:1.05rem;line-height:1.6}
-
-    .gallery{display:flex;gap:16px;overflow-x:auto;padding:8px 6px;scroll-behavior:smooth;}
-    .gallery::-webkit-scrollbar{height:8px}
-    .gallery::-webkit-scrollbar-thumb{background:var(--primary);border-radius:8px}
-    .gallery-item{min-width:220px;border-radius:12px;overflow:hidden;flex-shrink:0;cursor:pointer;box-shadow:0 8px 20px rgba(2,20,20,0.06)}
-    .gallery-item img{width:100%;height:140px;object-fit:cover;display:block;transition:transform .3s}
-    .gallery-item:hover img{transform:scale(1.04)}
-
-    .itinerary{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px}
-    .it-card{padding:18px;border-radius:12px;background:linear-gradient(180deg,#ffffff, #fff5ef);box-shadow:0 8px 18px rgba(4,20,20,0.04)}
-    .it-card h4{margin:0 0 8px 0}
-    .it-card p{margin:0;color:var(--muted)}
-
-    .includes ul{list-style:none;padding:0;margin:0;display:grid;gap:10px}
-    .includes li{padding-left:28px;position:relative;color:var(--muted);font-weight:600}
-    .includes li::before{content:"✔";position:absolute;left:0;top:0;color:var(--primary);font-weight:900}
-
-    .tips{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:12px}
-    .tip{background:linear-gradient(180deg,#fff5ef,#ffffff);padding:14px;border-radius:12px;text-align:center;font-weight:600;color:var(--accent)}
-
-    .experience-cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:12px}
-    .exp{border-radius:12px;overflow:hidden}
-    .exp img{width:100%;height:140px;object-fit:cover;display:block}
-    .exp .exp-body{padding:12px;background:#fff}
-
-    .cta{display:flex;gap:12px;align-items:center;justify-content:center;margin:28px 0}
-    .btn-primary{background:var(--primary);color:#fff;padding:12px 20px;border-radius:10px;text-decoration:none;font-weight:800;box-shadow:0 8px 18px rgba(255,111,60,0.16)}
-    .btn-secondary{background:transparent;border:2px solid var(--primary);color:var(--primary);padding:10px 16px;border-radius:10px;text-decoration:none;font-weight:700}
-
-    .fade-in{opacity:0;transform:translateY(2rem);transition:opacity .8s ease-out,transform .8s ease-out}
-    .fade-in.show{opacity:1;transform:none}
   </style>
 </head>
 <body>
@@ -354,6 +574,7 @@ nav {
   <p style="font-size:0.85rem;color:var(--muted);text-align:center;margin-top:6px;">*Precio referencial por persona en base doble. Consultar fechas y disponibilidad.</p>
 </main>
 
+<!-- FOOTER -->
 <footer class="footer">
   <style>
     /* ------------------ FOOTER AZUL ELEGANTE ------------------ */
@@ -484,28 +705,20 @@ nav {
   text-decoration: underline;
   color: #ffdd57; /* un color contraste */
 }
-.experience-card img {
-  width: 100%;
-  height: 12.5rem; /* antes 200px */
-  object-fit: cover; /* recorta y mantiene proporción */
-  border-radius: 12px;
-  display: block;
+
+    .hidden-link {
+  color: inherit;
+  text-decoration: none;
+  background: transparent;
 }
 
-.itinerary-card img {
-  width: 100%;
-  height: 11.25rem; /* antes 180px */
-  object-fit: cover;
-  border-radius: 12px;
+/* Evita cambios de color en visitado, hover o active */
+.hidden-link:visited,
+.hidden-link:hover,
+.hidden-link:active {
+  color: inherit;
+  text-decoration: none;
 }
-
-@media (max-width: 768px) {
-  .experience-card img {
-    height: 9.375rem; /* antes 150px */
-  }
-}
-
-    
   </style>
 
   <div class="footer-container">
@@ -551,8 +764,8 @@ nav {
   </div>
 
   <div class="footer-bottom">
-    © 2025 El Turista — San José • Diseñado por Agustin Espinosa
-  </div>
+    © 2025 El Turista — San José • Diseñado por  <a class="hidden-link" href="https://tintin-18.github.io/portafoliopersonal">Agustin Espinosa</a>
+
 </footer>
 
 <script>
